@@ -39,6 +39,7 @@ class MessageStrings
         9 => 'Logout',
         10 => "Move to page:",
         11 => "",
+        12 => 'Detail',
         1001 => "Other people might be updated.\n\nInitially=@1@\nCurrent=@2@\nDatabase=@3@\n\nYou can overwrite with your data if you select OK.",
         1002 => "Can't determine the Table Name: @1@",
         1003 => "No information to update: field=@1@",
