@@ -38,6 +38,7 @@ class MessageStrings_ja
         9 => 'ログアウト',
         10 => "",
         11 => "ページ目へ",
+        12 => '詳細',
         1001 => "他のユーザによってこのフィールドの値が変更された可能性があります。\n\n初期値=@1@\n変更値=@2@\n現在のデータベース上の値=@3@\n\nOKボタンをクリックすれば、変更値を保存します。",
         1002 => "テーブル名を決定できません: @1@",
         1003 => "更新に必要な情報が残されていません: フィールド名=@1@",
